# jsonrpc

./: README.md  jsonrpc.py  pyproject.toml
examples/: README.md  client.py  methods.py  server.py
