[project]
name = 'jsonrpc'
version = 'v0.0.2'
readme = 'README.md'
license = 'MIT'

[project.optional-dependencies]
dev = ['ruff', 'faterunner']

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.faterunner.targets]
check = ['ruff check .', 'ruff format --check .']
format = ['ruff check --fix .', 'ruff format .']

[tool.hatch.build.targets.wheel]
include = ["jsonrpc.py"]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
